Fix Button Groups alignment
Fix Button Group not alignin properly. Fixes https://github.com/Codeinwp/gutenberg-blocks/issues/614

--- a/src/blocks/button-group/style.scss
+++ b/src/blocks/button-group/style.scss
@@ -1,14 +1,14 @@
 .wp-block-themeisle-blocks-button-group {
 	&.align-left {
-		text-align: left;
+		justify-content: flex-start;
 	}
 
 	&.align-center {
-		text-align: center;
+		justify-content: center;
 	}
 
 	&.align-right {
-		text-align: right;
+		justify-content: flex-end;
 	}
 
 	&.collapse-desktop {
@@ -26,7 +26,7 @@
 			&.margin-left {
 				margin-left: 10px;
 			}
-		
+
 			&.margin-right {
 				margin-right: 10px;
 			}
@@ -40,7 +40,7 @@
 			&.margin-left {
 				margin-left: 10px;
 			}
-		
+
 			&.margin-right {
 				margin-right: 10px;
 			}
